k8s-conf/diplom-web-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: diplom-web-app-svc
  namespace: default
spec:
  selector:
    app: diplom-web-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
