k8s-conf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diplom-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /web-app
        pathType: Prefix
        backend:
          service:
            name: diplom-web-app-svc
            port:
              number: 80      
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-grafana
            port:
              number: 80
